cf_analysis_results/checkerframework_3.42.0_results_WPI/url9d04094941_petermikitsh_PizzaDeliverySystem_tgz-pJ8-testdrivers_ManagerReportTestDriverJ8.txt
../dataset/june2020_dataset/url9d04094941_petermikitsh_PizzaDeliverySystem_tgz-pJ8-testdrivers_ManagerReportTestDriverJ8/src/model/database/Database.java:136: error: (required.method.not.called) $$ 4 $$ method close $$ new FileOutputStream(_name + "_table.xml") $$ java.io.FileOutputStream $$ regular method exit $$ ( 2890, 2931 ) $$ @MustCall method close may not have been invoked on new FileOutputStream(_name + "_table.xml") or any of its aliases.
		        new FileOutputStream(_name +"_table.xml")));
		        ^
  The type of object is: java.io.FileOutputStream.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url9d04094941_petermikitsh_PizzaDeliverySystem_tgz-pJ8-testdrivers_ManagerReportTestDriverJ8/src/model/database/Database.java:161: error: (required.method.not.called) $$ 4 $$ method close $$ new FileInputStream(_name + "_table.xml") $$ java.io.FileInputStream $$ regular method exit $$ ( 3451, 3491 ) $$ @MustCall method close may not have been invoked on new FileInputStream(_name + "_table.xml") or any of its aliases.
							new FileInputStream(_name +"_table.xml") ) );
							^
  The type of object is: java.io.FileInputStream.
  Reason for going out of scope: regular method exit
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
